--- a/simpletoolkit.csproj
+++ b/simpletoolkit.csproj
@@ -216,6 +216,9 @@
   <ItemGroup>
     <None Include="img\user.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Windows-loading-cargando-ezgif.com-speed.gif" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\System.Runtime.WindowsRuntime.4.7.0\build\net45\System.Runtime.WindowsRuntime.targets" Condition="Exists('packages\System.Runtime.WindowsRuntime.4.7.0\build\net45\System.Runtime.WindowsRuntime.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
