--- a/simpletoolkit.csproj
+++ b/simpletoolkit.csproj
@@ -144,6 +144,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="scrRegister.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="scrRegister.Designer.cs">
+      <DependentUpon>scrRegister.cs</DependentUpon>
+    </Compile>
     <Compile Include="scrLoginSuccess.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -173,6 +179,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="scrRegister.resx">
+      <DependentUpon>scrRegister.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="scrLoginSuccess.resx">
       <DependentUpon>scrLoginSuccess.cs</DependentUpon>
     </EmbeddedResource>
