--- a/simpletoolkit.csproj
+++ b/simpletoolkit.csproj
@@ -148,6 +148,18 @@
     <Compile Include="frmMain.Designer.cs">
       <DependentUpon>frmMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmWingetGUI.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmWingetGUI.Designer.cs">
+      <DependentUpon>frmWingetGUI.cs</DependentUpon>
+    </Compile>
+    <Compile Include="metroSwitch.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="metroSwitch.Designer.cs">
+      <DependentUpon>metroSwitch.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="scrRegister.cs">
@@ -176,6 +188,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmWingetGUI.resx">
+      <DependentUpon>frmWingetGUI.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="metroSwitch.resx">
+      <DependentUpon>metroSwitch.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -239,6 +257,14 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="img\wingetgui.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="img\icons8-стрелка-влево-в-круге-2-100.png" />
+    <None Include="img\Back Arrow.png" />
+    <Content Include="img\Logout.png" />
+    <Content Include="img\Settings.png" />
+    <Content Include="img\Toggle Off.png" />
+    <Content Include="img\Toggle On.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\System.Runtime.WindowsRuntime.4.7.0\build\net45\System.Runtime.WindowsRuntime.targets" Condition="Exists('packages\System.Runtime.WindowsRuntime.4.7.0\build\net45\System.Runtime.WindowsRuntime.targets')" />
